Bump 223 versions (#3360)